--- a/VehicleShipment.Web/Components/Layout/NavMenu.razor
+++ b/VehicleShipment.Web/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">VehicleShipment.Web</a>
+        <a class="navbar-brand" href="">NET8.BlazorWebAppRenderModeServerGlobal</a>
     </div>
 </div>
 
@@ -27,4 +27,3 @@
         </div>
     </nav>
 </div>
-
