--- a/VehicleShipment.Web/Components/Pages/Home.razor
+++ b/VehicleShipment.Web/Components/Pages/Home.razor
@@ -1,7 +1,12 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Vehicle Shippment</PageTitle>
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+Welcome to your new Blazor Bootstrap - Web App (.NET 8). 
+<br /> 
+<br />
+Interactive render mode: Server 
+<br />
+Interactive location: Global
