--- a/VehicleShipment.Web/Components/_Imports.razor
+++ b/VehicleShipment.Web/Components/_Imports.razor
@@ -8,3 +8,11 @@
 @using Microsoft.JSInterop
 @using VehicleShipment.Web
 @using VehicleShipment.Web.Components
+@using System.ComponentModel.DataAnnotations
+@using Domain.Interfaces
+@using Microsoft.AspNetCore.Identity
+@using Domain.Entities
+@using Domain.DTO.Request
+@using Microsoft.AspNetCore.Components.Authorization
+@using VehicleShipment.Web.Components.Shared
+@using BlazorBootstrap;
