Added Vehicle Service

--- a/VehicleShipment.Web/Components/_Imports.razor
+++ b/VehicleShipment.Web/Components/_Imports.razor
@@ -15,4 +15,6 @@
 @using Domain.DTO.Request
 @using Microsoft.AspNetCore.Components.Authorization
 @using VehicleShipment.Web.Components.Shared
+@using VehicleShipment.Web.Security
+@using VehicleShipment.Web.DTO
 @using BlazorBootstrap;
