--- a/VehicleShipment.Web/Components/Pages/Account/Login.razor
+++ b/VehicleShipment.Web/Components/Pages/Account/Login.razor
@@ -2,8 +2,7 @@
 
 @inject IAccountService accountService;
 @inject NavigationManager navigationManager;
-
-
+@inject EncryptionHelper<LoginDTO> encrypt
 
 <h1>Login</h1>
 <div class="row">
@@ -51,8 +50,17 @@
             return;
         }
 
+        var loginData = new LoginDTO
+        {
+            Username = verify.Value,
+            Password = Input.Password,
+            RememberMe = Input.Remember
+        };
+
+        var payload = encrypt.Encode(loginData);
+
         // Navigate To HomePage
-        navigationManager.NavigateTo($"/processor/{verify.Value}/{Input.Password}/{Input.Remember}");
+        navigationManager.NavigateTo($"/processor/{payload}");
     }
 
     private sealed class InputModel
