--- a/VehicleShipment.Web/Components/Pages/Account/LoginProcessor.razor
+++ b/VehicleShipment.Web/Components/Pages/Account/LoginProcessor.razor
@@ -1,23 +1,20 @@
-﻿@page "/processor/{username}/{password}/{rememberme:bool}"
+﻿@page "/processor/{payload}"
 
 @inject SignInManager<User> signInManager
 @inject NavigationManager nav
+@inject EncryptionHelper<LoginDTO> encrypt
 
 Sign in...
 
 @code {
     [Parameter]
-    public string username { get; set; }
-
-    [Parameter]
-    public string password { get; set; }
-
-    [Parameter]
-    public bool rememberme { get; set; }
+    public string payload { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        await signInManager.PasswordSignInAsync(username, password, rememberme, false);
+        var loginDTO = encrypt.Decode(payload);
+
+        await signInManager.PasswordSignInAsync(loginDTO.Username, loginDTO.Password, loginDTO.RememberMe, false);
         nav.NavigateTo("/");
     }
 }
