List all vehicles

--- a/VehicleShipment.Web/Components/Layout/MainLayout.razor
+++ b/VehicleShipment.Web/Components/Layout/MainLayout.razor
@@ -40,6 +40,7 @@
                        new NavItem { Id = "1", Href = "/", IconName = IconName.HouseDoorFill, Text = "Home", Match=NavLinkMatch.All},
                        new NavItem { Id = "2", Href = "/counter", IconName = IconName.PlusSquareFill, Text = "Counter"},
                        new NavItem { Id = "3", Href = "/weather", IconName = IconName.Table, Text = "Fetch Data"},
+                       new NavItem { Id = "3", Href = "/vehicle", IconName = IconName.Truck, Text = "Vehicles"},
                    };
 
         return navItems;
