--- a/VehicleShipment.Web/Components/App.razor
+++ b/VehicleShipment.Web/Components/App.razor
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="VehicleShipment.Web.styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="@InteractiveServer" />
