--- a/VehicleShipment.Web/Components/_Imports.razor
+++ b/VehicleShipment.Web/Components/_Imports.razor
@@ -11,6 +11,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Domain.Interfaces
 @using Microsoft.AspNetCore.Identity
+@using Domain.DTO.Response
 @using Domain.Entities
 @using Domain.DTO.Request
 @using Microsoft.AspNetCore.Components.Authorization
