--- a/VehicleShipment.Web/Components/Pages/Home.razor
+++ b/VehicleShipment.Web/Components/Pages/Home.razor
@@ -1,12 +1,50 @@
 ﻿@page "/"
 
-<PageTitle>Vehicle Shippment</PageTitle>
+@using Microsoft.AspNetCore.Components.Authorization
+@inject AuthenticationStateProvider AuthenticationStateProvider
+@inject NavigationManager NavigationManager
+@inject SignInManager<User> SignInManager
 
-<h1>Hello, world!</h1>
+<PageTitle>Vehicle Shipment</PageTitle>
 
-Welcome to your new Blazor Bootstrap - Web App (.NET 8). 
-<br /> 
-<br />
-Interactive render mode: Server 
-<br />
-Interactive location: Global
+<h1>@greetingMessage</h1>
+
+@if (isLoggedIn)
+{
+    <button class="btn btn-danger" @onclick="Logout">Logout</button>
+}
+else
+{
+    <p>Welcome to your new Blazor Bootstrap - Web App (.NET 8).</p>
+}
+
+@code {
+    private bool isLoggedIn = false;
+    private string greetingMessage = "Hello, world!";
+
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+
+        if (user.Identity != null && user.Identity.IsAuthenticated)
+        {
+            isLoggedIn = true;
+
+            // Retrieve the FirstName claim (assuming it's stored in the claims)
+            var firstName = user.FindFirst(c => c.Type == "FirstName")?.Value;
+
+            // Update the greeting message to show the user's first name
+            greetingMessage = $"Hello, {firstName}";
+        }
+        else
+        {
+            isLoggedIn = false;
+        }
+    }
+
+    private async Task Logout()
+    {
+        NavigationManager.NavigateTo($"/logoutprocessor", true);
+    }
+}
