Added pages for Measure Unit

--- a/VehicleShipment.Web/Components/Layout/MainLayout.razor
+++ b/VehicleShipment.Web/Components/Layout/MainLayout.razor
@@ -58,6 +58,7 @@
                        new NavItem { Id = "3", Href = "/weather", IconName = IconName.Table, Text = "Fetch Data"},
                        new NavItem { Id = "4", Href = "/vehicle", IconName = IconName.Truck, Text = "Vehicles"},
                        new NavItem { Id = "5", Href = "/drivers", IconName = IconName.Person, Text = "Drivers"},
+                       new NavItem { Id = "6", Href = "/measureUnits", IconName = IconName.Tools, Text = "Measure Units"},
                    };
 
         return navItems;
