--- a/VehicleShipment.Windows/Components/Layout/MainLayout.razor
+++ b/VehicleShipment.Windows/Components/Layout/MainLayout.razor
@@ -1,17 +1,35 @@
 ﻿@inherits LayoutComponentBase
 
+@inject CustomAuthenticationStateProvider CustomAuthSP
+
 <div class="page">
 	<div class="sidebar">
 		<NavMenu />
 	</div>
 
-	<main>
-		<div class="top-row px-4">
-			<a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-		</div>
+    <main>
+        <div class="bb-top-row px-4 d-flex justify-content-end">
+            <AuthorizeView>
+                <Authorized>
+                    <button class="btn btn-link" @onclick="Logout">Logout</button>
+                </Authorized>
+                <NotAuthorized>
+                    <a href="/login">Login</a>
+                </NotAuthorized>
+            </AuthorizeView>
+        </div>
 
-		<article class="content px-4">
-			@Body
-		</article>
-	</main>
+        <article class="content px-4">
+            <div class="py-2">@Body</div>
+        </article>
+    </main>
 </div>
+
+@code {
+    private bool isLoggedIn = false;
+
+    private async Task Logout()
+    {
+        await CustomAuthSP.Logout();
+    }
+}
