--- a/VehicleShipment.Windows/Components/_Imports.razor
+++ b/VehicleShipment.Windows/Components/_Imports.razor
@@ -16,4 +16,8 @@
 @using Domain.DTO.Request
 @using VehicleShipment.Windows.Services
 @using System.ComponentModel.DataAnnotations
+@using Infrastructure.Services
+@using VehicleShipment.Windows.Models
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Identity
 @using BlazorBootstrap;
