Added Drivers to Windows app

--- a/VehicleShipment.Windows/Components/Pages/Account/Register.razor
+++ b/VehicleShipment.Windows/Components/Pages/Account/Register.razor
@@ -1,4 +1,5 @@
 ﻿@page "/account/register"
+@attribute [Authorize]
 @inject IAccountService accountService;
 @inject NavigationManager navigationManager;
 
