--- a/VehicleShipment.Windows/Components/Layout/NavMenu.razor
+++ b/VehicleShipment.Windows/Components/Layout/NavMenu.razor
@@ -28,6 +28,11 @@
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="drivers">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Drivers
+                </NavLink>
+            </div>
         }
         else
         {
