--- a/VehicleShipment.Windows/Components/Layout/NavMenu.razor
+++ b/VehicleShipment.Windows/Components/Layout/NavMenu.razor
@@ -10,27 +10,21 @@
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
         @if (isLoggedIn)
         {
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="weather">
-                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <NavLink class="nav-link" href="drivers">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Drivers
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="drivers">
-                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Drivers
+                <NavLink class="nav-link" href="measureUnits">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Measure Units
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="vehicle">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Vehicles
                 </NavLink>
             </div>
         }
